Changelog for borg.localrole

    (name of developer listed in brackets)

borg.localrole - 2.0.2 Unreleased


borg.localrole - 2.0.1 Released July 31st, 2008

    - Support caching of allowed local roles on the request.
      [witsch]

    - Renamed the default adapter to "default" so that people don't 
      accidentally override it with an unnamed adapter. Overriding the default
      should be possible, but is a marginal use case. If it's overridden but
      not replicated properly, all sorts of problems can result.
      [optilude]

    - Added exportimport.zcml which registers TitleOnlyExportImport for
      WorkspaceLocalRoleManager; this allows local roles plug-in to be
      imported and exported as part of a GenericSetup profile.
      [rafrombrc]

borg.localrole - 2.0.0 Released April 20th, 2008

    - Baseline for Plone 3.1
